[package]
name = "treeffect"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_ascii_terminal = "0.14.0"
bevy_prng = { version = "0.2.0", features = ["wyrand"] }
bevy_rand = "0.4.0"
bracket-noise = "0.8.7"
itertools = "0.12.0"
pathfinding = "4.4.0"
petgraph = "0.6.4"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
wyrand = "0.1.1"
